user invitation to the company
